<?xml version="1.0"?>
<package format="2">
  <name>dhaiba_ros</name>
  <version>1.0.0</version>
  <description>The dhaiba_ros package</description>

  <maintainer email="j.miyoshi@aist.go.jp">Jun Miyoshi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>genpy</depend>
  <depend>rospy</depend>
  <depend>rospy_message_converter</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pybind11_catkin</depend>
  <depend>DhaibaConnectN</depend>

</package>
